[fix] 修正addCart overflow

--- a/assets/scss/custom/_products.scss
+++ b/assets/scss/custom/_products.scss
@@ -1,6 +1,7 @@
 .page-products {
     @include size(100vw, auto);
 
+    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
