--- a/assets/scss/custom/_search.scss
+++ b/assets/scss/custom/_search.scss
@@ -1,6 +1,7 @@
 .page-search {
     @include size(100vw, auto);
 
+    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
